client/src/app/shopping-page/shopping-page.component.css
app-cart, app-products {
  width: 25vw;
  margin-top: 1vw;
  height: 80vh;
  border: 1px solid rgb(214, 214, 214);
  border-radius: 5px;
}
app-cart {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}
app-products {
  width: 69vw;

}

